# sphere

./: .env.cmake  .gitignore  CMakeLists.txt  README.md  cc.bat  debug.bat  debug.sh  gebcoStructure.txt  imgui.ini  release.bat  release.sh  start.bat
include/: ProfilerManager.hpp  global.hpp
src/: ProfilerManager.cpp  Sphere.hpp  defines.hpp  global.cpp  global.hpp  gui.cpp  gui.hpp  imgui.ini  inputs.cpp  inputs.hpp  main.cpp  pch.hpp  state.cpp  state.hpp  types.hpp  utils.cpp  utils.hpp
src/engine/: Airplane.cpp  Airplane.hpp  AirplaneCamera.cpp  AirplaneCamera.hpp  ArcballCamera.cpp  ArcballCamera.hpp  Camera.cpp  Camera.hpp  CameraStorage.hpp  EBO.cpp  EBO.hpp  FBO.hpp  GUI.hpp  InputsHandler.cpp  InputsHandler.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Moveable.cpp  Moveable.hpp  PingPongBuffer.hpp  RBO.hpp  Shader.cpp  Shader.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  Vertex.hpp  camera.cpp  camera.hpp  gui.cpp  inputs.cpp  inputs.hpp  meshes.cpp  meshes.hpp
src/engine/frustum/: Frustum.hpp  Plane.hpp
src/engine/frustum/volumes/: Sphere.cpp  Sphere.hpp  Volume.hpp
src/engine/generators/: borders.hpp
src/engine/gui/: AtmospherePlotter.cpp  AtmospherePlotter.hpp  PlotLine.cpp  PlotLine.hpp  ScrollingBuffer.hpp  TilePlotter.cpp  TilePlotter.hpp  gui.cpp  gui.hpp
src/engine/mesh/: BufferObject.hpp  EBO.cpp  EBO.hpp  FBO.hpp  Mesh.cpp  Mesh.hpp  MeshBase.cpp  MeshBase.hpp  RBO.hpp  Transformable.cpp  Transformable.hpp  VAO.hpp  VBO.cpp  VBO.hpp  Vertex.hpp  meshes.cpp  meshes.hpp  shapefile.cpp  shapefile.hpp
src/engine/mesh/planet/: Planet.cpp  Planet.hpp
src/engine/mesh/texture/: TexParams.hpp  Texture.cpp  Texture.hpp  TextureType.hpp  Tif.cpp  Tif.hpp  image2D.cpp  image2D.hpp
src/engine/objects/: Airplane.cpp  Airplane.hpp  Earth.cpp  Earth.hpp  Light.cpp  Light.hpp  PlanetAtmosphere.hpp  Sun.hpp  TerrainFace.hpp  TerrainFaceChunk.hpp  TileManager.cpp  TileManager.hpp  Trail.cpp  Trail.hpp
src/engine/planet/: Planet.cpp  Planet.hpp  TerrainFace.cpp  TerrainFace.hpp
src/engine/shaders/: airplane.frag  airplane.vert  atmosphere.frag  atmosphere.vert  bakeOpticalDepth.comp  direction.vert  earth.frag  earth.tesc  earth.tese  earth.vert  light.frag  light.vert  lines.frag  lines.geom  lines.vert  main.frag  main.vert  planet.frag  sun.frag  sun.vert  trail.frag  trail.vert
src/engine/shaders/default/: color.frag  normal.frag  normal.geom  normal.vert  texture.frag  texture.vert
src/engine/shaders/generators/: borders.comp
src/engine/shapefile/: Point.hpp  Polygon.hpp  shapefile.cpp  shapefile.hpp
src/engine/templates/: cube.cpp  cube.hpp
src/engine/texture/: Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  Texture2DArray.cpp  Texture2DArray.hpp  TextureCubemap.cpp  TextureCubemap.hpp  TextureDescriptor.hpp  TextureDescriptorVirtual.hpp  TextureVirtual.cpp  TextureVirtual.hpp  image2D.cpp  image2D.hpp
src/nc/: File.cpp  File.hpp  GEBCO.cpp  GEBCO.hpp
src/objects/: Airplane.cpp  Airplane.hpp  AirplaneCamera.cpp  AirplaneCamera.hpp  Earth.cpp  Earth.hpp  Light.cpp  Light.hpp  Planet.cpp  Planet.hpp  TerrainFace.hpp  TerrainFaceChunk.hpp  Trail.cpp  Trail.hpp
src/profiler/: ProfilerManager.hpp  ScopedProfilerTask.hpp
src/shaders/: airplane.frag  airplane.vert  atmosphere.frag  atmosphere.vert  borders.frag  borders.vert  earth.frag  earth.geom  earth.vert  light.vert  lines.frag  lines.geom  lines.vert  planet.comp  planet.frag  planet.geom  planet.vert  planet2.comp  planet2.vert  screen.frag  screen.vert  trail.vert
src/shaders/default/: color.vert  normal.geom  normal.vert  texture.frag  texture.vert
src/utils/: ThreadPool.cpp  ThreadPool.hpp  clrp.cpp  clrp.hpp  status.cpp  status.hpp  types.hpp  utils.cpp  utils.hpp
